--- a/index.html
+++ b/index.html
@@ -60,7 +60,9 @@
             <div class="card__text-content">
               <p class="card__text">Это было самое начало пути. На этом этапе важно было проникнуться основами и
                 настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
-              <p class="card__text">Путь будет долгим и точно не легким. Хоть в верстке я уже не новичок, но реалии рынка сегодня таковы, что быть просто верстальщиком недостаточно. Надо засучить рукава и вперед &mdash; к новым знаниям.</p>
+              <p class="card__text">Путь будет долгим и точно не легким. Хоть в верстке я уже не новичок, но реалии
+                рынка сегодня таковы, что быть просто верстальщиком недостаточно. Надо засучить рукава и вперед &mdash;
+                к новым знаниям.</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -98,8 +100,12 @@
               <p class="card__label">&lt;/HTML&gt;</p>
             </div>
             <div class="card__text-content">
-              <p class="card__text">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком сложно? что, если я&nbsp;не справлюсь?</p>
-              <p class="card__text">Нет места страху. Нужно справляться, кирпичик за кирпичиком. А если приуныть, то команда Практикума поможет.</p>
+              <p class="card__text">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают
+                новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска
+                бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком
+                сложно? что, если я&nbsp;не справлюсь?</p>
+              <p class="card__text">Нет места страху. Нужно справляться, кирпичик за кирпичиком. А если приуныть, то
+                команда Практикума поможет.</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -137,8 +143,11 @@
               <p class="card__label">&lt;CSS&gt;</p>
             </div>
             <div class="card__text-content">
-              <p class="card__text">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и поверить&nbsp;в себя.</p>
-              <p class="card__text">Круто, первый проект сдан. С накопленными знаниями было нетрудно, но однажды знания закончатся. Идем дальше.</p>
+              <p class="card__text">Первый проект — позади! Но это всё ещё самое начало пути. Радость могла быстро
+                померкнуть и смениться ожиданием провала. Или вы, наоборот, могли вдохновиться успехами и
+                поверить&nbsp;в себя.</p>
+              <p class="card__text">Круто, первый проект сдан. С накопленными знаниями было нетрудно, но однажды знания
+                закончатся. Идем дальше.</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -176,8 +185,12 @@
               <p class="card__label">&lt;desigions&gt;</p>
             </div>
             <div class="card__text-content">
-              <p class="card__text">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что&nbsp;он недостижим. А, может, вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.</p>
-              <p class="card__text">Предпочитаю доводить верстку до идеала, насколько мне позволяют мои навыки. Однако и стараться просто сделать тоже иногда приходится, когда сильно загружен на основной работе.</p>
+              <p class="card__text">На этом этапе вы уже достаточно разбирались в основах вёрстки, чтобы понять, как
+                много ещё впереди. Вы могли попытаться погнаться за идеалом и понять, что&nbsp;он недостижим. А, может,
+                вы вовсе и не подвержены перфекционизму и вместо того, чтобы сделать идеально, старались просто сделать.
+              </p>
+              <p class="card__text">Предпочитаю доводить верстку до идеала, насколько мне позволяют мои навыки. Однако и
+                стараться просто сделать тоже иногда приходится, когда сильно загружен на основной работе.</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -215,8 +228,14 @@
               <p class="card__label">care</p>
             </div>
             <div class="card__text-content">
-              <p class="card__text">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда рядом есть единомышленники, не правда ли?</p>
-              <p class="card__text">На мой взгляд, сначала лучше вникнуть в задачу и определить, что может вызвать трудности. Затем постараться разобраться во всем самостоятельно. И только когда уже понимаешь, что долго не можешь справиться с каким-то кейсом, а идеи и время уже на исходе, можно смело идти за помощью. Обычно к этом моменту в Пачке уже есть ответы на твои вопросы :3</p>
+              <p class="card__text">Всё это время вы были не одиноки (хотя, возможно, иногда и чувствовали, что одни
+                против целого мира). Вас окружали одногруппники, команда сопровождения и просто близкие люди, которым
+                можно пожаловаться, если очередной макет просто так не поддавался. Осваивать что-то новое легче, когда
+                рядом есть единомышленники, не правда ли?</p>
+              <p class="card__text">На мой взгляд, сначала лучше вникнуть в задачу и определить, что может вызвать
+                трудности. Затем постараться разобраться во всем самостоятельно. И только когда уже понимаешь, что долго
+                не можешь справиться с каким-то кейсом, а идеи и время уже на исходе, можно смело идти за помощью.
+                Обычно к этом моменту в Пачке уже есть ответы на твои вопросы :3</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -254,8 +273,10 @@
               <p class="card__label">&lt;support&gt;</p>
             </div>
             <div class="card__text-content">
-              <p class="card__text">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
-              <p class="card__text">Этот спринт &mdash; кладесь новых знаний и техник. Удалось разобраться во многих моментах, в которые я раньше глубоко не погружался.</p>
+              <p class="card__text">На этом курсе вы постоянно решали разные задачи. В какой-то момент вам могло
+                показаться, что решения просто иссякли. Значит, пришло время посмотреть на задачу под другим углом.</p>
+              <p class="card__text">Этот спринт &mdash; кладесь новых знаний и техник. Удалось разобраться во многих
+                моментах, в которые я раньше глубоко не погружался.</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -293,8 +314,11 @@
               <p class="card__label">&lt;lifes-style: none;&gt;</p>
             </div>
             <div class="card__text-content">
-              <p class="card__text">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и проектную пора&nbsp;сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
-              <p class="card__text">Нужно сконцентрироваться и умудриться успеть все и сразу :D. Тяжело в учении, легко в бою.</p>
+              <p class="card__text">Во время учёбы часто возникает чувство, когда не знаешь, за что хвататься. Вроде и
+                проектную пора&nbsp;сдавать, и задачи хочется порешать, и в теории получше разобраться, и жизнь не
+                забыть пожить. В такие моменты очень нужна концентрация. Вспомните, откуда вы её черпали.</p>
+              <p class="card__text">Нужно сконцентрироваться и умудриться успеть все и сразу :D. Тяжело в учении, легко
+                в бою.</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -332,8 +356,13 @@
               <p class="card__label">&lt;experience&gt;</p>
             </div>
             <div class="card__text-content">
-              <p class="card__text">Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда важен сам процесс познания.&nbsp;Ведь часто путь — и есть&nbsp;результат.</p>
-              <p class="card__text">Надеюсь, что успею запрыгнуть в последний вагон и сдать ПР4. Работа была нелегкая, хоть и понятная. В ней использовалось много новых для меня техник. Приходилось возвращаться к пройденным урокам и вспоминать материал. Но оно того стоит.</p>
+              <p class="card__text">Сейчас вы уже очень много знаете о вёрстке. Но это только начало. Во-первых, впереди
+                ещё много материала про «красотищу». Во-вторых, с окончанием курса учёба не заканчивается. Вёрстка — это
+                целый мир. И этот мир постоянно меняется. Познать его полностью не получится, но это тот случай, когда
+                важен сам процесс познания.&nbsp;Ведь часто путь — и есть&nbsp;результат.</p>
+              <p class="card__text">Надеюсь, что успею запрыгнуть в последний вагон и сдать ПР4. Работа была нелегкая,
+                хоть и понятная. В ней использовалось много новых для меня техник. Приходилось возвращаться к пройденным
+                урокам и вспоминать материал. Но оно того стоит.</p>
               <div class="card__buttons">
                 <button class="card__icon-button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
@@ -376,16 +405,16 @@
     </button>
 
     <dialog id="modal" class="modal">
-        <div class="modal__heading">
-          <svg class="modal__heading__icon" viewBox="0 0 39 39">
-            <use href="./svg/floppy.svg#floppy">
-          </svg>
-          <h3 class="modal__heading__title">Вставьте
-            дискету, чтобы продолжить</h3>
-        </div>
-        <button class="modal__button button_primary" type="button" onclick="window['modal'].close();">
-          <span class="button__text">ОК</span>
-        </button>
+      <div class="modal__heading">
+        <svg class="modal__heading__icon" viewBox="0 0 39 39">
+          <use href="./svg/floppy.svg#floppy">
+        </svg>
+        <h3 class="modal__heading__title">Вставьте
+          дискету, чтобы продолжить</h3>
+      </div>
+      <button class="modal__button button_primary" type="button" onclick="window['modal'].close();">
+        <span class="button__text">ОК</span>
+      </button>
     </dialog>
 
   </footer>
