fix images, add alts, add lazy-loading

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
             <h2 class="card__title">Фритрек и нулевой спринт: Подготовка&nbsp;к&nbsp;работе</h2>
             <div class="card__image-wrapper">
               <img class="card__image saturate" src="./images/min/card1-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+                alt="Кто-то держит кружку с надписью «The Adventure begins» на фоне природы, кружка показана крупным планом">
               <p class="card__label">&lt;/HTML&gt;</p>
             </div>
             <div class="card__text-content">
@@ -95,8 +95,8 @@
           <article class="card">
             <h2 class="card__title">1 спринт: Я — чистый лист</h2>
             <div class="card__image-wrapper">
-              <img class="card__image brightness" src="./images/min/card2-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+              <img class="card__image brightness" src="./images/min/card2-min.png" loading="lazy"
+                alt="Горка из нескольких камней, положенных друг на друга от больших к маленьким">
               <p class="card__label">&lt;/HTML&gt;</p>
             </div>
             <div class="card__text-content">
@@ -138,8 +138,8 @@
           <article class="card">
             <h2 class="card__title">1 спринт: А если не получится?</h2>
             <div class="card__image-wrapper">
-              <img class="card__image hue-rotate" src="./images/min/card3-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+              <img class="card__image hue-rotate" src="./images/min/card3-min.png" loading="lazy"
+                alt="Указатель со стрелкой вправо и надписью «Nowhere» посреди пустыни">
               <p class="card__label">&lt;CSS&gt;</p>
             </div>
             <div class="card__text-content">
@@ -180,8 +180,8 @@
           <article class="card">
             <h2 class="card__title">2 спринт: Погоня за идеалом</h2>
             <div class="card__image-wrapper">
-              <img class="card__image grayscale" src="./images/min/card4-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+              <img class="card__image grayscale" src="./images/min/card4-min.png" loading="lazy"
+                alt="Сканворд, собранный из деревянных пятнашек, из которого получается надпись «Practice makes perfect»">
               <p class="card__label">&lt;desigions&gt;</p>
             </div>
             <div class="card__text-content">
@@ -223,8 +223,8 @@
           <article class="card">
             <h2 class="card__title">2 спринт: О тех, кто рядом</h2>
             <div class="card__image-wrapper">
-              <img class="card__image contrast" src="./images/min/card5-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+              <img class="card__image contrast" src="./images/min/card5-min.png" loading="lazy"
+                alt="Ярмарочный ларек, на котором лежит много книг. На ларьке надпись «Think before you speak. Read before you think.»">
               <p class="card__label">care</p>
             </div>
             <div class="card__text-content">
@@ -268,8 +268,8 @@
           <article class="card">
             <h2 class="card__title">3 спринт: Обходные стратегии</h2>
             <div class="card__image-wrapper">
-              <img class="card__image wow-filter" src="./images/min/card6-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+              <img class="card__image wow-filter" src="./images/min/card6-min.png" loading="lazy"
+                alt="Собака в солнечных очках лежит на шезлонге">
               <p class="card__label">&lt;support&gt;</p>
             </div>
             <div class="card__text-content">
@@ -309,8 +309,8 @@
           <article class="card">
             <h2 class="card__title">3 спринт: Когда опускаются руки</h2>
             <div class="card__image-wrapper">
-              <img class="card__image blur" src="./images/min/card7-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+              <img class="card__image blur" src="./images/min/card7-min.png" loading="lazy"
+                alt="Уставший офисный работник, весь заклеенный стикерами с задачами, которые ему необходимо выполнить">
               <p class="card__label">&lt;lifes-style: none;&gt;</p>
             </div>
             <div class="card__text-content">
@@ -351,8 +351,8 @@
           <article class="card">
             <h2 class="card__title">«Сейчас я здесь»</h2>
             <div class="card__image-wrapper">
-              <img class="card__image opacity" src="./images/min/card8-min.png"
-                alt="Пиксельное изображение с трейлером (домом на колёсах) на фоне природы">
+              <img class="card__image opacity" src="./images/min/card8-min.png" loading="lazy"
+                alt="Мужчина с сумкой бежит по аэропорту">
               <p class="card__label">&lt;experience&gt;</p>
             </div>
             <div class="card__text-content">
