fix variation fonts settings and import, add dialog form

--- a/index.html
+++ b/index.html
@@ -412,9 +412,11 @@
         <h3 class="modal__heading__title">Вставьте
           дискету, чтобы продолжить</h3>
       </div>
-      <button class="modal__button button_primary" type="button" onclick="window['modal'].close();">
-        <span class="button__text">ОК</span>
-      </button>
+      <form method="dialog">
+        <button class="modal__button button_primary" type="button" onclick="window['modal'].close();">
+          <span class="button__text">ОК</span>
+        </button>
+      </form>
     </dialog>
 
   </footer>
