--- a/index.html
+++ b/index.html
@@ -20,10 +20,10 @@
 
 <body class="page">
   <header class="header">
-    <h1 class="header__title">
-      <span class="header__title__text header__title__text_large">&lt;/HTML&gt;</span>
-      <span class="header__title__text">закрывающий тег</span>
-    </h1>
+    <div class="header__title">
+      <a class="header__logo">&lt;/HTML&gt;</a>
+      <h1 class="header__title__heading">закрывающий тег</h1>
+    </div>
     <nav class="theme-menu header__theme-menu">
       <!-- Не меняйте разметку этого списка, иначе скрипты перестанут работать -->
       <ul class="theme-menu__list">
@@ -62,9 +62,9 @@
                 настроиться на учёбу. И, возможно, подумать, как новые знания могут повлиять на ваше будущее.</p>
               <p class="card__text">Путь будет долгим и точно не легким. Хоть в верстке я уже не новичок, но реалии
                 рынка сегодня таковы, что быть просто верстальщиком недостаточно. Надо засучить рукава и вперед &mdash;
-                к новым знаниям.</p>
+                к&nbsp;новым знаниям.</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -102,12 +102,12 @@
             <div class="card__text-content">
               <p class="card__text">На первых этапах мы работали со страхами и сомнениями, которые часто испытывают
                 новички. Один из них — страх перед чистым листом. Это, конечно же, намного сложнее, чем боязнь куска
-                бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с чего начать? а вдруг будет слишком
+                бумаги. Часто за этим ощущением скрываются более глубокие вопросы: с&nbsp;чего начать? а вдруг будет слишком
                 сложно? что, если я&nbsp;не справлюсь?</p>
-              <p class="card__text">Нет места страху. Нужно справляться, кирпичик за кирпичиком. А если приуныть, то
+              <p class="card__text">Нет места страху. Нужно справляться, кирпичик за кирпичиком. А&nbsp;если приуныть, то
                 команда Практикума поможет.</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -149,7 +149,7 @@
               <p class="card__text">Круто, первый проект сдан. С накопленными знаниями было нетрудно, но однажды знания
                 закончатся. Идем дальше.</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -192,7 +192,7 @@
               <p class="card__text">Предпочитаю доводить верстку до идеала, насколько мне позволяют мои навыки. Однако и
                 стараться просто сделать тоже иногда приходится, когда сильно загружен на основной работе.</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -237,7 +237,7 @@
                 не можешь справиться с каким-то кейсом, а идеи и время уже на исходе, можно смело идти за помощью.
                 Обычно к этом моменту в Пачке уже есть ответы на твои вопросы :3</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -278,7 +278,7 @@
               <p class="card__text">Этот спринт &mdash; кладесь новых знаний и техник. Удалось разобраться во многих
                 моментах, в которые я раньше глубоко не погружался.</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -320,7 +320,7 @@
               <p class="card__text">Нужно сконцентрироваться и умудриться успеть все и сразу :D. Тяжело в учении, легко
                 в бою.</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -364,7 +364,7 @@
                 хоть и понятная. В ней использовалось много новых для меня техник. Приходилось возвращаться к пройденным
                 урокам и вспоминать материал. Но оно того стоит.</p>
               <div class="card__buttons">
-                <button class="card__icon-button">
+                <button class="card__icon-button" type="button">
                   <svg class="like-icon" width="39" height="36" viewBox="0 0 39 36" fill="none"
                     xmlns="http://www.w3.org/2000/svg">
                     <g class="heart">
@@ -393,33 +393,35 @@
 
       </ul>
     </section>
+
+    <section class="memory">
+      <button class="memory__button button_primary" type="button" onclick="window['modal'].showModal()"
+        aria-controls="modal">
+        <svg class="memory__button__icon" viewBox="0 0 39 39">
+          <use href="./svg/floppy.svg#floppy"></use>
+        </svg>
+        <span class="memory__button__text button__text">Сохранить на&nbsp;память</span>
+      </button>
+
+      <dialog id="modal" class="modal">
+        <div class="modal__heading">
+          <svg class="modal__heading__icon" viewBox="0 0 39 39">
+            <use href="./svg/floppy.svg#floppy"></use>
+          </svg>
+          <h3 class="modal__heading__title">Вставьте
+            дискету, чтобы продолжить</h3>
+        </div>
+        <form method="dialog">
+          <button class="modal__button button_primary" type="button" onclick="window['modal'].close();">
+            <span class="button__text">ОК</span>
+          </button>
+        </form>
+      </dialog>
+
+    </section>
   </main>
 
-  <footer class="footer">
-    <button class="footer__button button_primary" type="button" onclick="window['modal'].showModal()"
-      aria-controls="modal">
-      <svg class="footer__button__icon" viewBox="0 0 39 39">
-        <use href="./svg/floppy.svg#floppy">
-      </svg>
-      <span class="footer__button__text button__text">Сохранить на память</span>
-    </button>
 
-    <dialog id="modal" class="modal">
-      <div class="modal__heading">
-        <svg class="modal__heading__icon" viewBox="0 0 39 39">
-          <use href="./svg/floppy.svg#floppy">
-        </svg>
-        <h3 class="modal__heading__title">Вставьте
-          дискету, чтобы продолжить</h3>
-      </div>
-      <form method="dialog">
-        <button class="modal__button button_primary" type="button" onclick="window['modal'].close();">
-          <span class="button__text">ОК</span>
-        </button>
-      </form>
-    </dialog>
-
-  </footer>
   <script src="./scripts/like.js"></script>
 </body>
 
